feat: estrucutra de datos y deserializacion